Slides 05: Add transformation 2d image

--- a/teoricas/teorica_05/src/computer_vision.tex
+++ b/teoricas/teorica_05/src/computer_vision.tex
@@ -2077,6 +2077,17 @@
     \footnotesize
     
     \begin{figure}
+        \includegraphics[width=0.9\columnwidth]{./images/transformations_2d.pdf}
+    \end{figure}
+    
+\end{frame}
+
+
+\begin{frame}
+    \frametitle{Tipos de transformaciones 2D}
+    \footnotesize
+    
+    \begin{figure}
         \includegraphics[width=0.9\columnwidth]{./images/transformation_table_2d.pdf}
     \end{figure}
     
