--- a/teoricas/teorica_05/slides.tex
+++ b/teoricas/teorica_05/slides.tex
@@ -31,16 +31,16 @@
 	% add title page
 	\frame{\titlepage}
 	
-\section{Visión por computadora}
-\input{src/computer_vision.tex}
+	\section{Visión por computadora}
+	\input{src/computer_vision.tex}
 
-% \section{Optical Flow}
-% \input{src/optical_flow.tex}
+	\section{Optical Flow}
+	\input{src/optical_flow.tex}
 
-% \section{Direct Linear Transform (DLT)}
-% \input{src/direct_linear_transform.tex}
+	\section{Direct Linear Transform (DLT)}
+	\input{src/direct_linear_transform.tex}
 
-% \section{Bibliografía}
-% \input{src/bibliography.tex}
+	\section{Bibliografía}
+	\input{src/bibliography.tex}
 	
 \end{document}
