--- a/teoricas/teorica_05/src/optical_flow.tex
+++ b/teoricas/teorica_05/src/optical_flow.tex
@@ -531,23 +531,18 @@
   \end{itemize}
 \end{frame}
 
-% Slide 5
-\begin{frame}
-  \frametitle{Motion Illusions}
+% \begin{frame}
+%   \frametitle{Motion Illusions}
 
-  \TODO{agregar imágenes}
+%   \TODO{agregar imágenes}
 
-  \begin{itemize}
-    \item Donguri Wave Illusion: Static image but perceived motion.
-    \item Ouchi Pattern: Inner disc appears to move with respect to the ring.
-  \end{itemize}
+%   \begin{itemize}
+%     \item Donguri Wave Illusion: Static image but perceived motion.
+%     \item Ouchi Pattern: Inner disc appears to move with respect to the ring.
+%   \end{itemize}
 
-  \vspace{0.5cm}
-  \centering
-  % \includegraphics[width=0.6\textwidth]{placeholder-slide9.png}
-\end{frame}
+% \end{frame}
 
-% Slide 9
 \begin{frame}
   \frametitle{Normal Flow and Aperture Problem}
   \begin{itemize}
