Tp3: improve homework

--- a/tps/tp3/tp3.tex
+++ b/tps/tp3/tp3.tex
@@ -39,12 +39,12 @@ El objetivo del trabajo práctico es la realización de los pasos básicos para 
 \end{itemize}
 
 \section{Datos}
-En este trabajo práctico se utilizará el dataset EuRoC\footnote{\url{https://projects.asl.ethz.ch/datasets/doku.php?id=kmavvisualinertialdatasets}}.
+En este trabajo práctico se utilizará el dataset EuRoC\footnote{\url{https://projects.asl.ethz.ch/datasets/doku.php?id=kmavvisualinertialdatasets}}. Rosbags ya convertidos a formato ros2 pueden ser descargados de \url{http://fs01.cifasis-conicet.gov.ar:90/~pire/datasets/euroc_rosbag2/}.
 
 
-Para el ejercicio de calibración, debe convertir la secuencia de calibración a formato ROS2. Para esto puede utilizar el software \lstinline{rosbags}\footnote{https://pypi.org/project/rosbags/}.
+%Para el ejercicio de calibración, debe convertir la secuencia de calibración a formato ROS2. Para esto puede utilizar el software \lstinline{rosbags}\footnote{https://pypi.org/project/rosbags/}.
 
-Los rosbags del dataset por defecto no cuentan con mensajes de \lstinline{camera_info} requeridos para rectificar las imágenes. Rosbags con mensajes de \lstinline{camera_info} pueden ser descargados de \url{http://fs01.cifasis-conicet.gov.ar:90/~pire/datasets/euroc_rosbag2/MH_01_easy_with_camera_info/}.
+%Los rosbags del dataset por defecto no cuentan con mensajes de \lstinline{camera_info} requeridos para rectificar las imágenes. Rosbags con mensajes de \lstinline{camera_info} pueden ser descargados de \url{http://fs01.cifasis-conicet.gov.ar:90/~pire/datasets/euroc_rosbag2/MH_01_easy_with_camera_info/}.
 
 
 \section{Ejercicios}
