Slides 09: minor changes

--- a/teoricas/teorica_09/src/motion_planning.tex
+++ b/teoricas/teorica_09/src/motion_planning.tex
@@ -21,7 +21,7 @@
     \begin{itemize}
         \item ¿Cómo reaccionar a objetos imprevistos (dinámicos)?
         \begin{itemize}
-            \item \textbf{Eficiencia:} tiene que ser eficiente al lidiar con objetos imprevistos imprevistos (dinámicos). Tiene que ser capaz de replanificar a medida que ejecuta un plan (\emph{Re-planning}). Por ejemplo ante una puerta que ha sido cerrada o una persona que se encuentra en frente.
+            \item \textbf{Eficiencia:} tiene que ser eficiente al lidiar con objetos imprevistos (dinámicos). Tiene que ser capaz de replanificar a medida que ejecuta un plan (\emph{Re-planning}). Por ejemplo ante una puerta que ha sido cerrada o una persona que se encuentra en frente.
             \item \textbf{Fiable (\emph{reliability}):} tiene que ser fiable con respecto a no colisionar con obstáculos.
         \end{itemize}
         
