Slides 09: minor changes

--- a/teoricas/teorica_09/src/motion_planning.tex
+++ b/teoricas/teorica_09/src/motion_planning.tex
@@ -1066,9 +1066,8 @@ En este ejemplo, $\configurationSpace$-space es obtenido por medio de agrandar l
 	Una representación discreta del espacio $\configurationSpace$ continuo generado por configuraciones muestreadas aleatoriamente en $\configurationSpace_{free}$ que están conectadas
 	en un gráfico.
 	\begin{itemize}
-		\item Los {\bf nodos} del grafo representan la configuración admisible de
-		el robot.
-		\item Las {\bf aristas} representan un camino factible (trayectoria) entre el
+		\item Los {\bf nodos} del grafo representan configuraciones admisibles del robot.
+		\item Las {\bf aristas} representan un camino factible (trayectoria) entre
 		configuraciones particulares.
 	\end{itemize}
 
