TP Factor Graph: Minor changes

--- a/tps/tp_factor_graph/tp5.tex
+++ b/tps/tp_factor_graph/tp5.tex
@@ -41,11 +41,11 @@ El objetivo de este trabajo práctico es implementar un solucionador de Pose Gra
 
 \section*{Pose Graph SLAM usando la librería GTSAM}
 %
-En este trabajo práctico, resolverá el problema SLAM con Pose-Graph utilizando la librería GTSAM. Si no está familiarizado con GTSAM, encontrará un tutorial detallado en su sitio web: \url{https://gtsam.org/tutorials/intro.html}. Para instalar GTSAM en c++, deberá clonar el código del repositorio: \url{https://github.com/borglab/gtsam}, descargar (usando git) la última versión y compilar la librería siguiendo las instrucciones.
+En este trabajo práctico, resolverá el problema SLAM con Pose-Graph utilizando la librería GTSAM. Si no está familiarizado con GTSAM, encontrará un tutorial detallado en su sitio web: \url{https://gtsam.org/tutorials/intro.html}. Para instalar GTSAM en C++, deberá clonar el código del repositorio: \url{https://github.com/borglab/gtsam}, descargar (usando git) la última versión y compilar la librería siguiendo las instrucciones.
 
 Después de instalar GTSAM con éxito, escriba una función para leer archivos G2O \footnote{\url{https://github.com/RainerKuemmerle/g2o/wiki/File-Format}} y resuelva el problema de optimización de grafos para casos 2D y 3D usando GTSAM. En esta tarea, utilizamos los datos proporcionados en \url{https://lucacarlone.mit.edu/datasets/}.
 
-Si bien GTSAM está desarrollado en C++, también proporciona un wrapper tanto para MATLAB como para Python. En esta tarea, eres libre de utilizar cualquiera de esos lenguajes.
+Si bien GTSAM está desarrollado en C++, también proporciona un wrapper tanto para MATLAB como para Python. En esta tarea, es libre de utilizar cualquiera de esos lenguajes.
 
 \subsection*{Guía de instalación de GTSAM}
 A continuación proporcionamos una guía de instalación para las bibliotecas GTSAM, luego presentamos sus versiones C++, MATLAB y Python respectivamente.
